fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/Medical_Education_Grant_Products__c.object-meta.xml
<CustomObject>
    <label>MEG Support</label>
    <nameField>
        <displayFormat>MEGPR-{00000}</displayFormat>
        <label>Medical Education Grant Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEG Support</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>