fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cadaveric Tissue</fullName>
            </value>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Post Grant Return</fullName>
            </value>
            <value>
                <fullName>Product/In-Kind</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Simulator(s)</fullName>
            </value>
            <value>
                <fullName>Technician(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>