fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/Product_Size_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Product_Size_Dimensions__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>