fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <label>Report Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>