fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/Requested_Monetary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Monetary_Amount__c</fullName>
    <inlineHelpText>Amount requested.</inlineHelpText>
    <label>Requested Monetary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>