fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity__c</fullName>
    <label>Requested Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>