fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Products__c/fields/UoMSentQty__c.field-meta.xml
<CustomField>
    <fullName>UoMSentQty__c</fullName>
    <label>UoM Sent Qty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BX</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>